# msmp

./: .env  Cargo.toml  bak.py  readme.md  servers
src/: bak.rs  db.rs  main.rs
src/models/: server.rs
src/utils/: mod.rs  packet.rs  varint.rs
