[package]
name = "multiplexer_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
native-tls = "0.2.14"
redis = "1.0.2"
reqwest = { version = "0.13.1", features = ["json", "form"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features=["full"] }
serde_json = "1.0.145"

